Firefox shop spacing bug fix

--- a/cofowp/wp-content/themes/cofodev/assets/sass/site/_posts-and-pages.scss
+++ b/cofowp/wp-content/themes/cofodev/assets/sass/site/_posts-and-pages.scss
@@ -1460,7 +1460,7 @@ p:empty,
 .item {
 	flex-basis: 50%;
 	padding: 4%;
-	margin-bottom: 10%;
+	margin-bottom: 10vh;
 
 	.item-image {
 		position: relative;
